# Advanced-Media-Player-Extension

./: .gitignore  Cargo.toml  build.sh
docs/: AMO_SUBMISSION.md  README.md  impl_plan.md
extension/: background.js  content.js  manifest.json  popup.html  popup.js  worker.js
extension/background/: injector.js  main.js  media-session.js  state.js  tabs.js
extension/popup/: equalizer.js  main.js  player.js  store.js  tabs.js  theme.js  ui.js  visualizer.js
src/: lib.rs
