[package]
name = "advanced-media-player"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "AudioContext",
  "AudioBuffer",
  "AudioBufferSourceNode",
  "MediaStream",
  "MediaElementAudioSourceNode",
  "GainNode",
  "BiquadFilterNode",
  "DynamicsCompressorNode",
  "AnalyserNode",
  "Window",
  "HtmlMediaElement",
  "AudioNode",
  "AudioDestinationNode",
]
